kdelibs (2:980312-4) frozen; urgency=low

  * moved all unnecessary files out of -dev
  * moved the symbolic link default->en to kdelibs, where it belongs
  * fixed the shlibs format
  * new qt1g release (1.33)

 -- Stephan Kulow <coolo@kde.org>  Tue, 31 Mar 1998 13:00:00 +0100   

kdelibs (2:980312-3) frozen; urgency=low

  * new g++ and libstdc++ release (egcs-2.90.26-1)

 -- Stephan Kulow <coolo@kde.org>  Tue, 24 Mar 1998 14:45:16 +0100

kdelibs (2:980312-2) unstable; urgency=low

  * use debhelper now

 -- Stephan Kulow <coolo@kde.org>  Sun, 15 Mar 1998 21:28:42 +0100

kdelibs (2:980312-1) experimental; urgency=low

  * changed the files file
  * New upstream release

 -- Stephan Kulow <coolo@kde.org>  Thu, 12 Mar 1998 22:15:37 +0100

kdelibs (2:980310-3) experimental; urgency=low

  * removed the preinst script
  * use absolute paths instead of the one with 
  * changed directory for libraries

 -- Stephan Kulow <coolo@kde.org>  Wed, 11 Mar 1998 20:11:50 +0100

kdelibs (2:980310-2) experimental; urgency=low

  * removed the file correction part from kderules

 -- Stephan Kulow <coolo@kde.org>  Mon,  9 Mar 1998 23:29:50 +0100

kdelibs (2:980310-1) experimental; urgency=low

  * New upstream release

 -- Stephan Kulow <coolo@kde.org>  Mon,  9 Mar 1998 22:47:16 +0100

kdelibs (980303-1) experimental; urgency=low

  * New upstream release

 -- Stephan Kulow <coolo@kde.org>  Wed, 4 Mar 1998 10:43:42 +0100

kdelibs (980228-1) experimental; urgency=low

  * added *.moc to the clean target
  * New upstream release

 -- Stephan Kulow <coolo@kde.org>  Sat, 28 Feb 1998 21:05:58 +0100

kdelibs (980227-2) experimental; urgency=low

  * removed the REENTRANT flag. KDE don't uses threds
  * updated libmediatool

 -- Stephan Kulow <coolo@kde.org>  Sat, 28 Feb 1998 01:22:56 +0100

kdelibs (980227-1) experimental; urgency=low

  * changed the name of libjpeg-dev
  * renamed preint to preinst (typo while moving last time)